--- a/scenarioA/services/my-account/MSCA/EI/Tax_Slips/Tax_Slips_T4E.html
+++ b/scenarioA/services/my-account/MSCA/EI/Tax_Slips/Tax_Slips_T4E.html
@@ -159,6 +159,38 @@
   	<p>You will be able to get your tax slips online earlier rather than waiting for them to arrive by mail. To get your tax slip online, select "Online" using the"</p><a href="#">Change My Tax Slip Delivery</a>" feature. You can reactivate the mail option using the same feature.<br><br>Below are your Canada Pension Plan (CPP) and/or Old Age Security (OAS) and Employment Insurance (EI) tax slips for current and/or previous years.<br><br>Depending on which benefits you are receiving, you may have more than one tax slip.<br><br>When initially opened, "View Tax Slips" shows your slips for the current tax year. If you have not received any payments under Canada Pension Plan (CPP), Old Age Security (OAS) or Employment Insurance (EI) during the current tax year, the page will read "You have no tax slips for YYYY" (current year).</p><br>
 	<div class="col-md-12 brdr-tp"><strong>Tax Slips for 2018</strong></div><br><br>
 	<p><strong>CPP and/or OAS Tax Slips</strong></p>
+	
+	<li><a href="#">IA - T4A (P) - Retirement - Original</a></li>
+	<p>Statement of Canada Pension Plan Benefits</p>
+	<li><a href="#">IA - T4A (OAS) - Original</a></li>
+	<p>Statement of Old Age Security</p><br><br>
+	<p>If you want to see your tax slips for previous years, you can select the year from the "Tax year" list. The list will go as far back as 6 years plus the current year.</p>
+	<br>
+	View tax slips for another year: 
+	<select>
+  		<option value="selectone">Select one</option>
+ 		<option value="2018">2018</option>
+ 		<option value="2017">2017</option>
+  		<option value="2016">2016</option>
+		<option value="2015">2015</option>
+		<option value="2014">2014</option>
+		<option value="2013">2013</option>
+		<option value="2012">2012</option>
+		<option value="2011">2011</option>
+	</select> <br><br>
+	
+	<button type="button" class="btn btn-primary">View</button>
+	<br><br>
+	<p><strong>Note: </strong>The individual tax slips contain links to information regarding your benefits. </p>
+	<br>
+	<strong>Amendments:</strong>
+
+		<li>Your amended <strong>CPP</strong> tax slips are available online. You must use the amended copy when you file your return with CRA.</li>
+		<li>If your <strong>OAS</strong> tax slips have been changed since originally issued in February, you cannot use this service to view the amended version of these tax slips. Use the amended copy mailed to you when you file your tax return with CRA.</li>
+		<li>Amended <strong>EI</strong> tax slips will be available online 4 to 6 weeks after the amendment is processed.</li>
+		<li>If you have lost your amended copy or if you wish to make any additional changes to your tax slips, please <a href="#"> contact us</a>.</li>
+
+	
 </section>
 </aside>
 </div>
