--- a/scenarioA/services/my-account/MSCA/EI/Tax_Slips/Tax-Slips-Mailing.html
+++ b/scenarioA/services/my-account/MSCA/EI/Tax_Slips/Tax-Slips-Mailing.html
@@ -166,9 +166,7 @@
 <div class="form-group">	
 <div class="input"><select class="form-control">
 		<option value="Online">Online</option>
-		<option value="Mail">Mail</option>
-		
-		
+		<option value="Mail">Mail</option>	
 </select>
 </div>
 </div>
@@ -178,10 +176,13 @@
 <p><strong>To get your EI tax slips online, select "Online" below.</strong> (Please note that a self printed copy of your electronic tax slip is considered an official document by the Canada Revenue Agency and it can be attached to your income tax return.)</p>
   
   <div class="mrgn-tp-md mrgn-bttm-lg brdr-bttm">
-  <select>
-  <option value="Online">Online</option>
-  <option value="Mail">Mail</option>
-</select>  
+  <div class="form-group">	
+<div class="input"><select class="form-control">
+		<option value="Online">Online</option>
+		<option value="Mail">Mail</option>	
+</select>
+</div>
+</div> 
 </div>
 
 <p><strong>Note:</strong> If you want to get your tax slips online, you can view and print them using this online service. Tax slips must be provided for payments (taxable and non-taxable) made to beneficiaries of the Canada Pension Plan (CPP), the Old Age Security (OAS) and Employment Insurance (EI) programs.</p>
