--- a/scenarioA/services/my-account/MSCA/EI/Tax_Slips/Tax-Slips-Mailing.html
+++ b/scenarioA/services/my-account/MSCA/EI/Tax_Slips/Tax-Slips-Mailing.html
@@ -189,12 +189,10 @@
 
 <p>You can change your mailing options at any time.</p>
 
+		<section>
 <a class="btn btn-primary" href="###">Submit</a>
 <a class="btn btn-default" href="###">Cancel</a>
-
-
- 
-
+		</section>
 
 	
 </div>
