--- a/scenarioA/services/my-account/MSCA/EI/Tax_Slips/Tax-Slips-Mailing.html
+++ b/scenarioA/services/my-account/MSCA/EI/Tax_Slips/Tax-Slips-Mailing.html
@@ -191,7 +191,7 @@
 
 		<section>
 <a class="btn btn-primary" href="###">Submit</a>
-<a class="btn btn-default" href="###">Cancel</a><br>
+<a class="btn btn-default" href="###">Cancel</a>
 		</section>
 
 	
