--- a/scenarioA/services/my-account/MSCA/CPP-OAS/View-Change-Info/Payment-Info.html
+++ b/scenarioA/services/my-account/MSCA/CPP-OAS/View-Change-Info/Payment-Info.html
@@ -241,7 +241,89 @@
  			</div>
  		</details>
   	<section>
-<p>XXXX</p>
+
+		
+		<details class="acc-group">
+ 			<summary class="wb-toggle tgl-tab" data-toggle='{"parent": ".accordion", "group": ".acc-group"}'>2017</summary>
+ 	<div class="tgl-panel">
+ 		
+	  <table class="table table-bordered" style="width:100%">
+	<thead>
+  <th>Payment Date</th>
+  <th>Net Amount</th>
+  <th>Payment Status</th>
+  <th>Payment Method</th>
+  </thead>
+  <tbody>
+  <tr>
+    <th>2017-09-27</th>
+    <td>$588.79 (CPP)</td>
+    <td>Paid</td>
+    <td>Direct Deposit</td>
+  </tr>
+  <tr>
+    <th>2017-09-19</th>
+    <td>$585.49 (OAS)</td>
+    <td>Issued</td>
+    <td>Direct Deposit</td>
+  </tr>
+  <tr>
+    <th>2017-08-15</th>
+    <td>$588.79 (CPP)</td>
+    <td>Paid</td>
+    <td>Direct Deposit</td>
+  </tr>
+  <tr>
+    <th>2017-07-20</th>
+    <td>$588.79 (CPP)</td>
+    <td>Paid</td>
+    <td>Direct Deposit</td>
+  </tr>
+  <tr>
+    <th>2017-06-15</th>
+    <td>$588.79 (CPP)</td>
+    <td>Paid</td>
+    <td>Direct Deposit</td>
+  </tr>
+	<tr>
+    <th>2017-05-15</th>
+    <td>$588.79 (CPP)</td>
+    <td>Paid</td>
+    <td>Direct Deposit</td>
+  </tr>
+<tr>
+    <th>2017-04-15</th>
+    <td>$588.79 (CPP)</td>
+    <td>Paid</td>
+    <td>Direct Deposit</td>
+  </tr>
+<tr>
+    <th>2017-03-15</th>
+    <td>$588.79 (CPP)</td>
+    <td>Paid</td>
+    <td>Direct Deposit</td>
+  </tr>
+<tr>
+    <th>2017-02-15</th>
+    <td>$588.79 (CPP)</td>
+    <td>Paid</td>
+    <td>Direct Deposit</td>
+  </tr>
+<tr>
+    <th>2017-01-15</th>
+    <td>$588.79 (CPP)</td>
+    <td>Paid</td>
+    <td>Direct Deposit</td>
+  </tr>
+
+	 </tbody>
+	</table>
+ 			</div>
+ 		</details>
+  	<section>
+
+		<p>Pensions and Old Age Security benefits are paid during the last three days of each month. After Service Canada pays you, it will show in your payment information. Contact us for more information about your pension and benefit amounts. If you receive a Quebec Pension Plan benefit, please contact the Retraite Québec.</p>
+		<p><a href="###">Return to Canada Pension Plan/Old Age Security main menu</a></p>
 
 
 
