--- a/scenarioA/services/my-account/MSCA/CPP-OAS/My-Contact/Consent-to-Communicate.html
+++ b/scenarioA/services/my-account/MSCA/CPP-OAS/My-Contact/Consent-to-Communicate.html
@@ -154,7 +154,7 @@
 </div>
 <section class="container">
   <a class="btn btn-default" href="###" role="button">Featured services</a>
-  <a class="btn btn-default" href="###" role="button"Accessibility</a>
+  <a class="btn btn-default" href="###" role="button">Accessibility</a>
 	<a class="btn btn-default" href="###" role="button">Help</a><br></section>
 	
 	<main class="container" property="mainContentOfPage" role="main"><span id="pageTemplate:j_id__ctru6pc6" class="af_panelGroupLayout">
@@ -182,28 +182,51 @@
   <p>If Service Canada records show that a legal representative, such as a guardian, curator, committee, lawyer, trustee or a person with a power of attorney is authorized to act for you, we will communicate only with that legal representative.</p>
   
   <h3>Consent to communicate information for CPP or OAS or both of these pension programs</h3>
- 	
+		<div class="row">
+ <div class="col-md-6">	
   <section class="panel panel-info">
   <header class="panel-heading">
    <h5 class="panel-title">Canada Pension Plan</h5>
   </header>
   <div class="panel-body">
-   <h6>Authorized person</strong></h6>
-  <p> Ann Smith
-   1 RUE MARQUETTE
-   GATINEAU QC
-   A1A 1A1
+   <p><strong>Authorized person</strong></p>
+  <p>Ann Smith<br>
+   1 RUE MARQUETTE<br>
+   GATINEAU QC<br>
+   A1A 1A1<br>
    (613) 555 5555</p>
-   <h6>Relationship</h6>
+<p><strong>Relationship</strong></p>
    <p>Sister-in-Law</p>
    <a class="btn btn-primary" href="###">Change</a>
    <a class="btn btn-default" href="###">Stop</a>
    <a class="btn btn-default" href="###">Apply to My OAS</a>
   </div>
 </section>
+	 </div>
 	 
+		<div class="col-md-6">	
+  <section class="panel panel-info">
+  <header class="panel-heading">
+   <h5 class="panel-title">Old Age Security</h5>
+  </header>
+  <div class="panel-body">
+   <p><strong>Authorized person</strong></p>
+  <p>Babacar Diop<br>
+   1 PETERSON PL<br>
+   KANATA ON<br>
+   A2A 2A2<br>
+   (613) 555 5555</p>
+<p><strong>Relationship</strong></p>
+   <p>Mother-in-Law</p>
+   <a class="btn btn-primary" href="###">Change</a>
+   <a class="btn btn-default" href="###">Stop</a>
+   <a class="btn btn-default" href="###">Apply to My OAS</a>
+  </div>
+</section>
+	 </div>	
 
-	
+			
+		</div>
 </div>
 </div>
 </span> 
