--- a/scenarioA/services/my-account/MSCA/CPP-OAS/My-Contact/Consent-to-Communicate.html
+++ b/scenarioA/services/my-account/MSCA/CPP-OAS/My-Contact/Consent-to-Communicate.html
@@ -155,7 +155,8 @@
 <section class="container">
   <a class="btn btn-default" href="###" role="button">Featured services</a>
   <a class="btn btn-default" href="###" role="button">Accessibility</a>
-	<a class="btn btn-default" href="###" role="button">Help</a><br></section>
+	<a class="btn btn-default" href="###" role="button">Help</a>
+	Signed in as <strong>FIRSTNAME LASTNAME</strong><br></section>
 	
 	<main class="container" property="mainContentOfPage" role="main"><span id="pageTemplate:j_id__ctru6pc6" class="af_panelGroupLayout">
 	
@@ -225,6 +226,28 @@
 </section>
 	 </div>	
 
+			<div class="row">
+ <div class="col-md-6">	
+  <section class="panel panel-info">
+  <header class="panel-heading">
+   <h5 class="panel-title">Canada Pension Plan</h5>
+  </header>
+  <div class="panel-body">
+   <p><strong>Authorized person</strong></p>
+  <p>Joe Fake<br>
+   100 COLONEL BY DR <br>
+   OTTAWA ON <br>
+   A3A 3A3<br>
+   (613) 555 5555</p>
+<p><strong>Relationship</strong></p>
+   <p>Father</p>
+   <a class="btn btn-primary" href="###">Change</a>
+   <a class="btn btn-default" href="###">Stop</a>
+   <a class="btn btn-default" href="###">Apply to My OAS</a>
+  </div>
+</section>
+	 </div>
+			</div>
 			
 		</div>
 </div>
