--- a/scenarioA/services/my-account/MSCA/CPP-OAS/View-Change-Info/direct-deposit-CPP-OAS.html
+++ b/scenarioA/services/my-account/MSCA/CPP-OAS/View-Change-Info/direct-deposit-CPP-OAS.html
@@ -166,7 +166,7 @@
 <p>If any of the above situations apply to you, and you have not yet notified Service Canada, you must <a href="#">contact</a> the Department for assistance. From outside North America, you must <a href="#">contact</a> the Department in writing or through your embassy. <strong>Failure to do so could result in an overpayment or non-receipt</strong> of benefits to which you may have been entitled.
 </p>	
 	
-// Alert with a heading
+<!-- Alert with a heading -->
 <section class="alert alert-info">
   <h*>NEW!</h*>
   Did you know you have the option of sharing your direct deposit banking information between Canada Pension Plan and the Canada Revenue Agency (CRA)?
@@ -198,8 +198,8 @@
   </tr>
 </table>
 
-<a class="btn btn-primary" href="###">Change</a>
-<a class="btn btn-primary" href="###">Share this information with the CRA</a>
+<a class="btn btn-primary" style="margin:5px;" href="###">Change</a>
+<a class="btn btn-primary" style="margin:5px;" href="###">Share this information with the CRA</a>
 			  </div>
 		</section>
 	</div>
