--- a/scenarioA/services/my-account/MSCA/CPP-OAS/View-Change-Info/direct-deposit-CPP-OAS.html
+++ b/scenarioA/services/my-account/MSCA/CPP-OAS/View-Change-Info/direct-deposit-CPP-OAS.html
@@ -183,7 +183,7 @@
 			  </header>
 			  <div class="panel-body">
 
-<table style="width:100%" class="col-md-12 brdr-bttm">
+<table style="width:100%">
   <tr>
     <th>Branch number:</th>
     <td>03713</td>
@@ -197,7 +197,9 @@
     <td>999000791720</td>
   </tr>
 </table>
-
+ 
+				  <div class="col-md-12 brdr-bttm"></div>
+					  
 <a class="btn btn-primary" style="margin:10px;" href="###">Change</a>
 <a class="btn btn-primary" style="margin:10px;" href="###">Share this information with the CRA</a>
 			  </div>
