--- a/scenarioA/services/my-account/MSCA/CPP-OAS/View-Change-Info/direct-deposit-CPP-OAS.html
+++ b/scenarioA/services/my-account/MSCA/CPP-OAS/View-Change-Info/direct-deposit-CPP-OAS.html
@@ -230,7 +230,7 @@
   </tr>
 </table>
  
-				  <div class="col-md-12 brdr-bttm"></div>
+				  <div class="col-md-12 brdr-bttm" style="margin:5px;"></div>
 					  
 <a class="btn btn-primary" style="margin:10px;" href="###">Change</a>
 <a class="btn btn-danger" style="margin:10px;" href="###">Delete</a>
