--- a/scenarioA/services/my-account/MSCA/CPP-OAS/View-Change-Info/direct-deposit-CPP-OAS.html
+++ b/scenarioA/services/my-account/MSCA/CPP-OAS/View-Change-Info/direct-deposit-CPP-OAS.html
@@ -232,8 +232,8 @@
  
 				  <div class="col-md-12 brdr-bttm" style="margin:5px;"></div>
 					  
-<a class="btn btn-primary" style="margin:10px;" href="###">Change</a>
-<a class="btn btn-danger" style="margin:10px;" href="###">Delete</a>
+<a class="btn btn-primary" style="margin-left:10px;" href="###">Change</a>
+<a class="btn btn-danger" href="###">Delete</a>
 			  </div>
 		</section>
 	</div>
