--- a/scenarioA/services/my-account/MSCA/CPP-OAS/View-Change-Info/direct-deposit-CPP-OAS.html
+++ b/scenarioA/services/my-account/MSCA/CPP-OAS/View-Change-Info/direct-deposit-CPP-OAS.html
@@ -183,7 +183,7 @@
 			  </header>
 			  <div class="panel-body">
 
-<table style="width:100%">
+<table style="width:100%" cellspacing="10">
   <tr>
     <th>Branch number:</th>
     <td>03713</td>
@@ -215,7 +215,7 @@
 			  </header>
 			  <div class="panel-body">
 
-<table style="width:100%">
+<table style="width:100%" cellspacing="10">
   <tr>
     <th>Branch number:</th>
     <td>20206</td>
@@ -247,7 +247,7 @@
 			  </header>
 			  <div class="panel-body">
 
-<table style="width:100%">
+<table style="width:100%" cellspacing="10">
   <tr>
     <th>Branch number:</th>
     <td>03713</td>
@@ -277,7 +277,7 @@
 			  </header>
 			  <div class="panel-body">
 
-<table style="width:100%">
+<table style="width:100%" cellspacing="10">
   <tr>
     <th>Branch number:</th>
     <td>20206</td>
