--- a/scenarioA/services/my-account/MSCA/CPP-OAS/View-Change-Info/direct-deposit-CPP-OAS.html
+++ b/scenarioA/services/my-account/MSCA/CPP-OAS/View-Change-Info/direct-deposit-CPP-OAS.html
@@ -173,7 +173,8 @@
 </section>
 	
 <h2>Canada Pension Plan (CPP)</h2>
-
+ 
+	<div>
 <div class="row">
 	<div class="col-md-6">
 		<section class="panel panel-info">
@@ -299,7 +300,7 @@
 			  </div>
 		</section>
 	</div>
-		
+	</div>	
 		
 	
 </div>	
