--- a/scenarioA/services/my-account/MSCA/CPP-OAS/View-Change-Info/Payment-Info.html
+++ b/scenarioA/services/my-account/MSCA/CPP-OAS/View-Change-Info/Payment-Info.html
@@ -153,7 +153,7 @@
 </div>
 <section class="container">
   <a class="btn btn-default" href="###" role="button">Featured services</a>
-  <a class="btn btn-default" href="###" role="button">Accessibility</a>
+  <a class="btn btn-default" href="###" role="button">Accessibility</a> <p class="text-right">Signed in as <strong>FIRSTNAME LASTNAME</strong></p>
   <a class="btn btn-default" href="###" role="button">Help</a></section>
 	
 	<main class="container" property="mainContentOfPage" role="main"><span id="pageTemplate:j_id__ctru6pc6" class="af_panelGroupLayout">
