--- a/scenarioA/services/my-account/MSCA/CPP-OAS/View-Change-Info/CPP-Contributions.html
+++ b/scenarioA/services/my-account/MSCA/CPP-OAS/View-Change-Info/CPP-Contributions.html
@@ -157,7 +157,7 @@
 	<div id="table">
 
 
-<table style="width:100%">
+<table class="table table-bordered" style="width:100%">
   <tr>
     <th>Year</th>
     <th>Your contributions</th>
@@ -260,9 +260,9 @@
     <td>$42,100.00</td>
     <td>P</td>
   </tr>
-  <tr><strong>Legend for Notes:</strong><br>
+  <tr><td><strong>Legend for Notes:</strong><br>
 B – Below basic exemption  |  M – Maximum  |  P – Post-Retirement benefit |  S – Self-Employed earnings  |  CS – Credit Split
-</tr>
+</td></tr>
 </table>
 </div>
 
