--- a/scenarioA/services/my-account/MSCA/CPP-OAS/View-Change-Info/CPP-Contributions.html
+++ b/scenarioA/services/my-account/MSCA/CPP-OAS/View-Change-Info/CPP-Contributions.html
@@ -213,12 +213,6 @@
     <td>S, M</td>
   </tr>
    <tr>
-    <th></th>
-    <td></td>
-    <td></td>
-    <td></td>
-  </tr>
-   <tr>
     <th>2008</th>
     <td>$1,309.80</td>
     <td>$29,960.00</td>
@@ -260,12 +254,17 @@
     <td>$42,100.00</td>
     <td>P</td>
   </tr>
-  <tr><td><strong>Legend for Notes:</strong><br>
+  <tr><td colspan="4"><strong>Legend for Notes:</strong><br>
 B – Below basic exemption  |  M – Maximum  |  P – Post-Retirement benefit |  S – Self-Employed earnings  |  CS – Credit Split
 </td></tr>
 </table>
 </div>
 
+
+	
+	
+	
+	
 <p><strong>Note:</strong></p>
 <ul>
 <li>If any of this information is incorrect, please send us a correction.</li>
