--- a/scenarioA/services/my-account/MSCA/CPP-OAS/View-Change-Info/CPP-Contributions.html
+++ b/scenarioA/services/my-account/MSCA/CPP-OAS/View-Change-Info/CPP-Contributions.html
@@ -269,7 +269,8 @@ B – Below basic exemption  |  M – Maximum  |  P – Post-Retirement benefit 
 <ul>
 <li>If any of this information is incorrect, please send us a correction.</li>
 <li>If you have filed your income tax return, your earnings and contributions for the current year may not yet be posted.</li>
-<li>Request a Statement of Contributions by mail</li>
+<li>Request a Statement of Contributions by mail</li><br>
+	</ul>
 
 <a href="#">Return to Canada Pension Plan/Old Age Security</a><br><br>
 	
