--- a/scenarioA/services/my-account/MSCA/CPP-OAS/View-Change-Info/CPP-Contributions.html
+++ b/scenarioA/services/my-account/MSCA/CPP-OAS/View-Change-Info/CPP-Contributions.html
@@ -159,100 +159,100 @@
 
 <table class="table table-bordered" style="width:100%">
   <tr>
-    <th>Year</th>
-    <th>Your contributions</th>
-    <th>Your pensionable earnings</th>
-    <th>Notes</th>
+    <th style="text-align:center">Year</th>
+    <th style="text-align:center">Your contributions</th>
+    <th style="text-align:center">Your pensionable earnings</th>
+    <th style="text-align:center">Notes</th>
   </tr>
   <tr>
-    <th>2000</th>
-    <td>$1,045.44</td>
-    <td>$30,306.00</td>
-    <td>CS</td>
+    <th style="text-align:center">2000</th>
+    <td style="text-align:center">$1,045.44</td>
+    <td style="text-align:center">$30,306.00</td>
+    <td style="text-align:center">CS</td>
   </tr>
   <tr>
-    <th>2001</th>
-    <td>$1,496.40</td>
-    <td>$38,300.00</td>
-    <td>S, M</td>
+    <th style="text-align:center">2001</th>
+    <td style="text-align:center">$1,496.40</td>
+    <td style="text-align:center">$38,300.00</td>
+    <td style="text-align:center">S, M</td>
   </tr>
   <tr>
-    <th>2002</th>
-    <td>$1,444.17</td>
-    <td>$38,100.00</td>
-    <td>M</td>
+    <th style="text-align:center">2002</th>
+    <td style="text-align:center">$1,444.17</td>
+    <td style="text-align:center">$38,100.00</td>
+    <td style="text-align:center">M</td>
   </tr>
   <tr>
-    <th>2003</th>
-    <td>$1,309.80</td>
-    <td>$29,960.00</td>
-    <td>M</td>
+    <th style="text-align:center">2003</th>
+    <td style="text-align:center">$1,309.80</td>
+    <td style="text-align:center">$29,960.00</td>
+    <td style="text-align:center">M</td>
   </tr>
   <tr>
-    <th>2004</th>
-    <td>$1,831.50</td>
-    <td>$40,500.00</td>
-    <td>B</td>
+    <th style="text-align:center">2004</th>
+    <td style="text-align:center">$1,831.50</td>
+    <td style="text-align:center">$40,500.00</td>
+    <td style="text-align:center">B</td>
   </tr>
   <tr>
-    <th>2005</th>
-    <td>$1,861.20</td>
-    <td>$41,100.00</td>
-    <td>B, M</td>
+    <th style="text-align:center">2005</th>
+    <td style="text-align:center">$1,861.20</td>
+    <td style="text-align:center">$41,100.00</td>
+    <td style="text-align:center">B, M</td>
   </tr>
   <tr>
-    <th>2006</th>
-    <td>$1,910.70</td>
-    <td>$42,100.00</td>
-    <td>M</td>
+    <th style="text-align:center">2006</th>
+    <td style="text-align:center">$1,910.70</td>
+    <td style="text-align:center">$42,100.00</td>
+    <td style="text-align:center">M</td>
   </tr>
    <tr>
-    <th>2007</th>
-    <td>$1,861.20</td>
-    <td>$41,100.00</td>
-    <td>S, M</td>
+    <th style="text-align:center">2007</th>
+    <td style="text-align:center">$1,861.20</td>
+    <td style="text-align:center">$41,100.00</td>
+    <td style="text-align:center">S, M</td>
   </tr>
    <tr>
-    <th>2008</th>
-    <td>$1,309.80</td>
-    <td>$29,960.00</td>
-    <td>S</td>
+    <th style="text-align:center">2008</th>
+    <td style="text-align:center">$1,309.80</td>
+    <td style="text-align:center">$29,960.00</td>
+    <td style="text-align:center">S</td>
   </tr>
    <tr>
-    <th>2009</th>
-    <td>$1,496.40</td>
-    <td>$38,300.00</td>
-    <td>S</td>
+    <th style="text-align:center">2009</th>
+    <td style="text-align:center">$1,496.40</td>
+    <td style="text-align:center">$38,300.00</td>
+    <td style="text-align:center">S</td>
   </tr>
   <tr>
-    <th>2010</th>
-    <td>$1,861.20</td>
-    <td>$41,100.00</td>
-    <td>S, M</td>
+    <th style="text-align:center">2010</th>
+    <td style="text-align:center">$1,861.20</td>
+    <td style="text-align:center">$41,100.00</td>
+    <td style="text-align:center">S, M</td>
   </tr>
   <tr>
-    <th>2011</th>
-    <td>$1,496.40</td>
-    <td>$42,100.00</td>
-    <td>B</td>
+    <th style="text-align:center">2011</th>
+    <td style="text-align:center">$1,496.40</td>
+    <td style="text-align:center">$42,100.00</td>
+    <td style="text-align:center">B</td>
   </tr>
   <tr>
-    <th>2012</th>
-    <td>$1,861.20</td>
-    <td>$42,100.00</td>
-    <td>M</td>
+    <th style="text-align:center">2012</th>
+    <td style="text-align:center">$1,861.20</td>
+    <td style="text-align:center">$42,100.00</td>
+    <td style="text-align:center">M</td>
   </tr>
   <tr>
-    <th>2013</th>
-    <td>$1,910.70</td>
-    <td>$42,100.00</td>
-    <td>M</td>
+    <th style="text-align:center">2013</th>
+    <td style="text-align:center">$1,910.70</td>
+    <td style="text-align:center">$42,100.00</td>
+    <td style="text-align:center">M</td>
   </tr>
   <tr>
-    <th>2013</th>
-    <td>$295.87</td>
-    <td>$42,100.00</td>
-    <td>P</td>
+    <th style="text-align:center">2013</th>
+    <td style="text-align:center">$295.87</td>
+    <td style="text-align:center">$42,100.00</td>
+    <td style="text-align:center">P</td>
   </tr>
   <tr><td colspan="4"><strong>Legend for Notes:</strong><br>
 B – Below basic exemption  |  M – Maximum  |  P – Post-Retirement benefit |  S – Self-Employed earnings  |  CS – Credit Split
