--- a/scenarioA/services/my-account/MSCA/CPP-OAS/View-Change-Info/CPP-Contributions.html
+++ b/scenarioA/services/my-account/MSCA/CPP-OAS/View-Change-Info/CPP-Contributions.html
@@ -137,7 +137,7 @@
         <div class="row">
           <ol class="breadcrumb">
             <li><a href="/MSCA-Prototype/scenarioA/services/my-account/MSCA/lobby-wax.html">MSCA</a>> <a href="#">CPP/OAS</a></li>
-            <li>Payment destination</li>
+            <li>CPP Earnings and Contributions</li>
           </ol>
         </div>
       </div>
