--- a/scenarioA/services/my-account/MSCA/CPP-OAS/View-Change-Info/CPP-Contributions.html
+++ b/scenarioA/services/my-account/MSCA/CPP-OAS/View-Change-Info/CPP-Contributions.html
@@ -149,6 +149,7 @@
  <a class="btn btn-default" href="#" role="button">Accessibility</a>
  <a class="btn btn-default" href="#" role="button">Help</a>  <p class="text-right">Signed in as <strong>FIRSTNAME LASTNAME</strong></p>
 <h1 property="name" id="wb-cont" dir="ltr">CPP Earnings and Contributions</h1>
+	<p><strong>Date of Birth: MMM YYYY</strong></p>
   
 <p>Your CPP Earnings and Contributions provide a history of your earnings and contributions to the CPP (and to the Quebec Pension Plan, if you have contributed to both plans).</p>	
 
