--- a/scenarioA/services/my-account/MSCA/CPP-OAS/View-Change-Info/Request-Child-Rearing-Provision.html
+++ b/scenarioA/services/my-account/MSCA/CPP-OAS/View-Change-Info/Request-Child-Rearing-Provision.html
@@ -148,7 +148,7 @@
 <a class="btn btn-default" href="#" role="button">Featured services</a>
  <a class="btn btn-default" href="#" role="button">Accessibility</a>
  <a class="btn btn-default" href="#" role="button">Help</a>  <p class="text-right">Signed in as <strong>FIRSTNAME LASTNAME</strong></p>
-<h1 property="name" id="wb-cont" dir="ltr">Request my child-rearing provision111111</h1>
+<h1 property="name" id="wb-cont" dir="ltr">Request my child-rearing provision</h1>
   
 <p>Your file shows that you do not currently have an existing child-rearing provision applied to your account.</p>	
 
