--- a/scenarioA/services/my-account/MSCA/CPP-OAS/View-Change-Info/Request-Child-Rearing-Provision.html
+++ b/scenarioA/services/my-account/MSCA/CPP-OAS/View-Change-Info/Request-Child-Rearing-Provision.html
@@ -153,7 +153,7 @@
 <p>Your file shows that you do not currently have an existing child-rearing provision applied to your account.</p>	
 
 <div class="well">
-<p><strong>Important</strong></p>
+<p><strong>Important:</strong></p>
 <p>To add children through this online service, the following conditions must be fully met:</p>
 <ul>
 <li>you must have been the child's <strong>primary caregiver</strong> for the full period, from their birth until age of seven;</li>
@@ -187,10 +187,10 @@
  <p><strong>Date of birth:</strong></p>
   <input type="text" class="form-control" placeholder="YYYY-MM-DD"/>
   
-  <a class="btn btn-primary" href="###">Add another child</a><br>
+  <a class="btn btn-primary" style="margin:10px;" href="###">Add another child</a><br>
   
-  <a class="btn btn-primary" href="###">Continue</a>
-  <a class="btn btn-default" href="###">Cancel</a>
+  <a class="btn btn-primary" style="margin:10px;" href="###">Continue</a>
+  <a class="btn btn-default" style="margin:10px;" href="###">Cancel</a><br>
   
 
 <a href="###">Return to Canada Pension Plan/Old Age Security</a><br><br>
