--- a/scenarioA/services/my-account/MSCA/CPP-OAS/View-Change-Info/Request-Child-Rearing-Provision.html
+++ b/scenarioA/services/my-account/MSCA/CPP-OAS/View-Change-Info/Request-Child-Rearing-Provision.html
@@ -187,9 +187,9 @@
  <p><strong>Date of birth:</strong></p>
   <input type="text" class="form-control" placeholder="YYYY-MM-DD"/>
   
-  <a class="btn btn-primary" style="margin:10px;" href="###">Add another child</a><br>
+  <a class="btn btn-primary" style="margin-top:10px; margin-bottom:10px; margin-right:10px;" href="###">Add another child</a><br>
   
-  <a class="btn btn-primary" style="margin:10px;" href="###">Continue</a>
+  <a class="btn btn-primary" style="margin-top:10px; margin-bottom:10px; margin-right:10px;" href="###">Continue</a>
   <a class="btn btn-default" style="margin:10px;" href="###">Cancel</a><br>
   
 
