--- a/scenarioA/services/my-account/MSCA/CPP-OAS/View-Change-Info/Request-Child-Rearing-Provision.html
+++ b/scenarioA/services/my-account/MSCA/CPP-OAS/View-Change-Info/Request-Child-Rearing-Provision.html
@@ -177,7 +177,7 @@
   <input type="text" class="form-control" placeholder="" />
 
  <p><strong>Date of birth:</strong></p>
-  <input type="text" class="form-control" placeholder="YYYY-MM-DD"/>
+  <input type="text" class="form-control" placeholder="YYYY-MM-DD"/><br><br>
   
   <div class="col-md-12 brdr-bttm"></div>
   
