--- a/scenarioA/services/my-account/MSCA/CPP-OAS/View-Change-Info/Request-Child-Rearing-Provision.html
+++ b/scenarioA/services/my-account/MSCA/CPP-OAS/View-Change-Info/Request-Child-Rearing-Provision.html
@@ -179,7 +179,7 @@
  <p><strong>Date of birth:</strong></p>
   <input type="text" class="form-control" placeholder="YYYY-MM-DD"/><br><br>
   
-  <div class="col-md-12 brdr-bttm"></div>
+  <div class="col-md-12 brdr-bttm"></div><br><br>
   
   <p><strong>SIN:</strong></p>
   <input type="text" class="form-control" placeholder="" />
