--- a/scenarioA/services/my-account/MSCA/CPP-OAS/View-Change-Info/Request-Child-Rearing-Provision.html
+++ b/scenarioA/services/my-account/MSCA/CPP-OAS/View-Change-Info/Request-Child-Rearing-Provision.html
@@ -174,7 +174,7 @@
   <p>Please enter the following information for each of your children.</p>
   
   <p><strong>SIN:</strong></p>
-  <input type="text" class="form-control" placeholder="" />
+  <input type="text" class="form-control" placeholder="" /><br>
 
  <p><strong>Date of birth:</strong></p>
   <input type="text" class="form-control" placeholder="YYYY-MM-DD"/><br>
@@ -182,7 +182,7 @@
   <div class="col-md-12 brdr-bttm"></div><br>
   
   <p><strong>SIN:</strong></p>
-  <input type="text" class="form-control" placeholder="" />
+  <input type="text" class="form-control" placeholder="" /><br>
 
  <p><strong>Date of birth:</strong></p>
   <input type="text" class="form-control" placeholder="YYYY-MM-DD"/>
@@ -190,7 +190,7 @@
   <a class="btn btn-primary" style="margin-left:0px; margin-top:10px; margin-bottom:10px; margin-right:10px;" href="###">Add another child</a><br>
   
   <a class="btn btn-primary" style="margin-left:0px; margin-top:10px; margin-bottom:10px; margin-right:10px;" href="###">Continue</a>
-  <a class="btn btn-default" style="margin:10px;" href="###">Cancel</a><br>
+  <a class="btn btn-default" style="margin:10px;" href="###">Cancel</a><br><br>
   
 
 <a href="###">Return to Canada Pension Plan/Old Age Security</a><br><br>
