--- a/scenarioA/services/my-account/MSCA/CPP-OAS/View-Change-Info/Child-Rearing-Provision-Confirm-Info.html
+++ b/scenarioA/services/my-account/MSCA/CPP-OAS/View-Change-Info/Child-Rearing-Provision-Confirm-Info.html
@@ -156,7 +156,7 @@
 <section class="panel panel-info">
   <div class="panel-body">
    <p>
-   <table style="width:100%" cellspacing="10">
+   <table style="width:10%" cellspacing="10">
   <tr>
     <th>Name:</th>
     <td>CHILD'S NAME</td>
@@ -174,7 +174,7 @@
   </div>
 </section><br>
 
-<a class="btn btn-primary" href="###">Add another child</a><br>
+<a class="btn btn-primary" href="###">Add another child</a><br><br>
 
 <p>To apply for the child rearing provision through this online service, you are certifying that all of the following conditions are met for the child(ren) listed above:</p>
 <ul>
