--- a/scenarioA/services/my-account/MSCA/CPP-OAS/View-Change-Info/Child-Rearing-Provision-Confirm-Info.html
+++ b/scenarioA/services/my-account/MSCA/CPP-OAS/View-Change-Info/Child-Rearing-Provision-Confirm-Info.html
@@ -201,16 +201,13 @@
 <p>Your personal information may be used and/or disclosed for policy analysis, research and/or evaluation purposes. However, these additional uses and/or disclosures of your personal information will never result in an administrative decision being made about you.</p>
 <p>Your personal information is administered in accordance with the Privacy Act and other applicable laws governing the protection of personal information under the control of ESDC. Under the DESD Act and Privacy Act you have the right to look at the personal information in your file and request correction. We will keep this information in Personal Information Bank ESDC PPU 146 (Retirement, Disability, Survivors and Death benefits). You can ask to see your file by contacting a Service Canada office. Instructions for requesting personal information are provided in the government publication Info Source.</p>
 
-<span class="label label-warning">[Note: If the client is applying for RTR with CRP, the continue button will return to the RTR application, SBT B 029]<br>
+<span class="label label-warning">[Note: If the client is applying for RTR with CRP, the continue button will return to the RTR application, SBT B 029]<br></span>
 <a class="btn btn-primary" href="###">Continue</a>
 <a class="btn btn-default" href="###">Cancel</a>
-</span>
 
-<span class="label label-warning">[The following screen (SBT J 004) should only be displayed when the client is requesting CRP using the standalone application from the MSCA main menu]<br>
+<span class="label label-warning">[The following screen (SBT J 004) should only be displayed when the client is requesting CRP using the standalone application from the MSCA main menu]<br></span>
 <a class="btn btn-primary" href="###">Continue</a>
 <a class="btn btn-default" href="###">Cancel</a>
-</span>
-
 
 <a href="#">Return to Canada Pension Plan/Old Age Security</a><br><br>
 	
