--- a/scenarioA/services/my-account/MSCA/landing-page-ei.html
+++ b/scenarioA/services/my-account/MSCA/landing-page-ei.html
@@ -195,9 +195,10 @@
         <div class="panel-body">
           <h2 id="a1-1" class="h3 mrgn-tp-0">Information on your latest EI claim</h2>
           <p>Choose the “View my status and correspondence (Alert Me)” button to see your claim status, messages sent to you on your active and past claims (to Dec 2017) and subscribe to Alert Me service for email alerts.  If you have an active claim, the “Latest Claim” button shows the condition of your claim as of today including; start date of claim, weekly benefit rate, numbers of weeks of benefit paid, type of benefits being claimed etc. The “Payment information” button provides specific information on payment and non-payment details and your declarations for each week of EI benefits that you have claimed. </p>
-          <button type="button" class="btn btn-default" a href="/MSCA-Prototype/scenarioA/services/my-account/MSCA/EI/latest-claim-status.html">View my status and correspondence (Alert me)</button>
-          <button type="button" class="btn btn-default" a href="/MSCA-Prototype/scenarioA/services/my-account/MSCA/EI/latest-claim-details.html">Latest claim</button>
-          <button type="button" class="btn btn-default" a href="/MSCA-Prototype/scenarioA/services/my-account/MSCA/EI/EI-payment-page.html">Payment Information</button>
+          <button onclick="window.location.href = '/MSCA-Prototype/scenarioA/services/my-account/MSCA/EI/latest-claim-status.html';" type="button" class="btn btn-default">View my status and correspondence (Alert me)</button>
+          
+			<button onclick="window.location.href = '/MSCA-Prototype/scenarioA/services/my-account/MSCA/EI/latest-claim-details.html';" type="button" class="btn btn-default">Latest claim</button>
+          <button onclick="window.location.href = '/MSCA-Prototype/scenarioA/services/my-account/MSCA/EI/EI-payment-page.html';" type="button" class="btn btn-default">Payment Information</button>
         </div>
       </div>
       <div class="panel panel-default">
@@ -222,15 +223,15 @@
         <div class="panel-body">
           <h2 id="a1-4" class="h3 mrgn-tp-0">Tax information</h2>
           <p>The Tax slips T4E button Allows you to view and print T4Es for the current year and for the past six years if you received EI benefits. The Tax slip mailing options button allows you to suppress your mailed paper copy. </p>
-          <button type="button" class="btn btn-default" a href="/MSCA-Prototype/scenarioA/services/my-account/MSCA/EI/Tax_Slips/Tax_Slips_T4E.html">Tax slips (T4E)</button>
-          <button type="button" class="btn btn-default" a href="/MSCA-Prototype/scenarioA/services/my-account/MSCA/EI/Tax_Slips/Tax-Slips-Mailing.html">Tax slip mailing options</button>
+          <button onclick="window.location.href = '/MSCA-Prototype/scenarioA/services/my-account/MSCA/EI/Tax_Slips/Tax_Slips_T4E.html';" type="button" class="btn btn-default">Tax slips (T4E)</button>
+          <button onclick="window.location.href = '/MSCA-Prototype/scenarioA/services/my-account/MSCA/EI/Tax_Slips/Tax-Slips-Mailing.html';" type="button" class="btn btn-default">Tax slip mailing options</button>
         </div>
       </div>
 		<div class="panel panel-default">
         <div class="panel-body">
           <h2 id="a1-5" class="h3 mrgn-tp-0">Past Claims</h2>
           <p>If applicable, this page displays a list of your past EI claims. Choosing a particular claim will provide you with specific information on that past claim including past claim payment details. </p>
-          <button type="button" class="btn btn-default" a href="/MSCA-Prototype/scenarioA/services/my-account/MSCA/EI/past-claims.html">Past claim(s)</button>
+          <button onclick="window.location.href = '/MSCA-Prototype/scenarioA/services/my-account/MSCA/EI/past-claims.html';" type="button" class="btn btn-default">Past claim(s)</button>
         </div>
       </div>
       <div class="panel panel-default">
@@ -238,7 +239,7 @@
           <h2 id="a1-6" class="h3 mrgn-tp-0">eForms</h2>
           <p>If you have an active EI claim and depending on the type of benefits you are receiving this service will display eForms which allow you to submit information to your claim electronically. eForms will only be displayed if you are on an active claim and you are receiving benefits to which these eForms apply. Note that eForms will not be displayed if you do not have an active EI claim or if these eForms do not apply to the type of benefits you are receiving (see the Help text).</p>
 			
-          <button type="button" class="btn btn-default" a href="/MSCA-Prototype/scenarioA/services/my-account/MSCA/EI/eForm/eForm-PNS.html">Provide new information regarding my claim</button>
+			<button onclick="window.location.href = '/MSCA-Prototype/scenarioA/services/my-account/MSCA/EI/eForm/eForm-PNS.html';" type="button" class="btn btn-default">Provide new information regarding my claim</button>
         </div>
       </div>
       <div class="panel panel-default">
@@ -259,7 +260,7 @@
         <div class="panel-body">
           <h2 id="a1-9" class="h3 mrgn-tp-0">Mistakes can Happen</h2>
           <p>Information on how to correct past mistakes.</p>
-          <button type="button" class="btn btn-default" a href="/MSCA-Prototype/scenarioA/services/my-account/MSCA/EI/eForm/mistakes-can-happen.html">Mistakes can happen</button>
+          <button onclick="window.location.href = '/MSCA-Prototype/scenarioA/services/my-account/MSCA/EI/eForm/mistakes-can-happen.html';" type="button" class="btn btn-default">Mistakes can happen</button>
         </div>
       </div>
           
