--- a/scenarioA/services/my-account/MSCA/EI/province.html
+++ b/scenarioA/services/my-account/MSCA/EI/province.html
@@ -195,9 +195,10 @@
 
     <button type="button" class="btn btn-primary">Apply</button>
 <button type="button" class="btn btn-danger">Cancel</button>  
-	   <section>
+	  <br /> <section>
 		   <a href="/MSCA-Prototype/scenarioA/services/my-account/MSCA/EI/EI-Landing-Page/landingpg-w-anchorlinks.html">Return to Employment Insurance main menu</a><br>
 	   </section>
+<br />
    
 
 
