--- a/scenarioA/services/my-account/MSCA/EI/province.html
+++ b/scenarioA/services/my-account/MSCA/EI/province.html
@@ -171,7 +171,7 @@
 
 <form>
        <fieldset>
-          <legend><strong>* My current province of residence is:</strong></legend>
+          <label><strong>* My current province of residence is:</strong></label>
           <p>
              <select id = "myList">
                <option value = "1">Ontario</option>
