--- a/scenarioA/services/my-account/MSCA/EI/latest-claim-status.html
+++ b/scenarioA/services/my-account/MSCA/EI/latest-claim-status.html
@@ -158,25 +158,29 @@
   
   <div class="panel panel-default"> 
         <!-- Default panel contents -->
-        <div class="panel-heading"><strong>Did you know?</strong></div>
+    <div class="panel-heading"><strong>Did you know?</strong></div>
         
         <!-- List group -->
         <ul class="list-group">
-          <li class="list-group-item">
-		  <ul>
-			<li>You can receive alerts on the latest updates to your EI claim/application if you <a href="#">register for Alert Me</a></li>
-			<li>"View my status and correspondence" feature was introduced in 2016.  If you had an EI claim that started before 2016, find it in your <a href="#">latest claim details</a> or <a href="#">past claim details</a></li>
-		  </ul>
-		</li>
+			<li>
+			  If you do not receive email alerts when new important EI information is available in your My Service Canada Account, you can select "Register for Alert Me" from the left-hand menu to register now!
+		  </li>
+			<li>
+			  <em>View my status and correspondence</em> is a new feature introduced in November 2016. If you had a claim that was started prior to this date, you may have to select <a href="">View my latest claim details</a> to find additional information on your latest claim.
+		  </li>
+			<li>
+			  You can select <a href="">Help</a> for additional website information.
+		  </li>
+		
         </ul>
     </div>
-  <h3>Latest updates to my EI claim/application: </h3>
+  <h3>Detailed Information</h3>
   
  <div class="accordion">
   
  		<!-- Accordion section 1 -->
  		<details class="acc-group">
- 			<summary class="wb-toggle tgl-tab" data-toggle='{"parent": ".accordion", "group": ".acc-group"}'>2018-11-30 - Decision Made <br> Claim Finalized</summary>
+ 			<summary class="wb-toggle tgl-tab" data-toggle='{"parent": ".accordion", "group": ".acc-group", "state": ".on"}'>2018-11-30 - Decision Made <br> Claim Finalized</summary>
  			<div class="tgl-panel">
  				<p>We have finalized your claim for Employment Insurance benefits. You can <a href="">view your latest claim information here</a>.</p><br>
 
@@ -187,7 +191,7 @@
  
  		<!-- Accordion section 2 -->
  		<details class="acc-group">
- 			<summary class="wb-toggle tgl-tab" data-toggle='{"parent": ".accordion", "group": ".acc-group"}'>2018-10-30 - Under Review<br>Application Under Review</summary>
+ 			<summary class="wb-toggle tgl-tab" data-toggle='{"parent": ".accordion", "group": ".acc-group", "state": ".on"}'>2018-10-30 - Under Review<br>Application Under Review</summary>
  			<div class="tgl-panel">
 				<p><strong>We've received your Employment Insurance application</strong>.<br>
 					We’re working to process your request and complete your claim in a reasonable amount of time. Once we finish our review:</p>
@@ -212,7 +216,8 @@
  
  	</div>
 
-	<h3>View past claim messages</h3>
+	<!--
+<h3>View past claim messages</h3>
 	<p>View historical messages of your past EI claims below (we introduced this feature in November 2016):</p>
 	<ul>
 		<li><a href="">Received - 2018-07-11</a></li>
@@ -237,7 +242,7 @@
 		<li><a href="">View EI publications</a></li>
 	</ul>
 
-  	
+  	-->
 	
 </section>
 </aside>
