--- a/scenarioA/services/my-account/MSCA/EI/latest-claim-status.html
+++ b/scenarioA/services/my-account/MSCA/EI/latest-claim-status.html
@@ -160,7 +160,7 @@
     <div class="panel-heading"><strong>Did you know?</strong></div>
         
         <!-- List group -->
-        <ul class="list-group">
+        <ul>
 			<li>
 			  If you do not receive email alerts when new important EI information is available in your My Service Canada Account, you can select "Register for Alert Me" from the left-hand menu to register now!
 		  </li>
@@ -173,13 +173,14 @@
 		
         </ul>
     </div>
+	
   <h3>Detailed Information</h3>
   
  <div class="accordion">
   
  		<!-- Accordion section 1 -->
  		<details class="acc-group">
- 			<summary class="wb-toggle tgl-tab" data-toggle='{"parent": ".accordion", "group": ".acc-group", "state": ".on"}'>2018-11-30 - Decision Made <br> Claim Finalized</summary>
+ 			<summary class="wb-toggle tgl-tab" data-toggle='{"parent": ".accordion", "group": ".acc-group", "stateOn": ".foo"}'>2018-11-30 - Decision Made <br> Claim Finalized</summary>
  			<div class="tgl-panel">
  				<p>We have finalized your claim for Employment Insurance benefits. You can <a href="">view your latest claim information here</a>.</p><br>
 
@@ -190,7 +191,7 @@
  
  		<!-- Accordion section 2 -->
  		<details class="acc-group">
- 			<summary class="wb-toggle tgl-tab" data-toggle='{"parent": ".accordion", "group": ".acc-group", "state": ".on"}'>2018-10-30 - Under Review<br>Application Under Review</summary>
+ 			<summary class="wb-toggle tgl-tab" data-toggle='{"parent": ".accordion", "group": ".acc-group", "stateOn": ".bar"}'>2018-10-30 - Under Review<br>Application Under Review</summary>
  			<div class="tgl-panel">
 				<p><strong>We've received your Employment Insurance application</strong>.<br>
 					We’re working to process your request and complete your claim in a reasonable amount of time. Once we finish our review:</p>
