--- a/scenarioA/services/my-account/MSCA/EI/latest-claim-status.html
+++ b/scenarioA/services/my-account/MSCA/EI/latest-claim-status.html
@@ -179,7 +179,7 @@
  <div class="accordion">
   
  		<!-- Accordion section 1 -->
- 		<details class="acc-group open">
+ 		<details open class="acc-group">
  			<summary class="wb-toggle tgl-tab" data-toggle='{"parent": ".accordion", "group": ".acc-group", "state": "on"}'>2018-11-30 - Decision Made <br> Claim Finalized</summary>
  			<div class="tgl-panel">
  				<p>We have finalized your claim for Employment Insurance benefits. You can <a href="">view your latest claim information here</a>.</p><br>
@@ -190,7 +190,7 @@
  		</details>
  
  		<!-- Accordion section 2 -->
- 		<details class="acc-group">
+ 		<details open>
  			<summary class="wb-toggle tgl-tab" data-toggle='{"parent": ".accordion", "group": ".acc-group", "stateOn": ".bar"}'>2018-10-30 - Under Review<br>Application Under Review</summary>
  			<div class="tgl-panel">
 				<p><strong>We've received your Employment Insurance application</strong>.<br>
