--- a/scenarioA/services/my-account/MSCA/EI/latest-claim-status.html
+++ b/scenarioA/services/my-account/MSCA/EI/latest-claim-status.html
@@ -180,7 +180,7 @@
   
  		<!-- Accordion section 1 -->
  		<details open class="acc-group">
- 			<summary class="wb-toggle tgl-tab" data-toggle='{"parent": ".accordion", "group": ".acc-group", "state": "on"}'><span class="label label-default">2018-11-30 - Decision Made <br> Claim Finalized</span></summary>
+ 			<summary class="wb-toggle tgl-tab well" data-toggle='{"parent": ".accordion", "group": ".acc-group", "state": "on"}'>2018-11-30 - Decision Made <br> Claim Finalized</summary>
  			<div class="tgl-panel">
  				<p>We have finalized your claim for Employment Insurance benefits. You can <a href="">view your latest claim information here</a>.</p><br>
 
@@ -191,7 +191,7 @@
  
  		<!-- Accordion section 2 -->
  		<details open class="acc-group">
- 			<summary class="wb-toggle tgl-tab" data-toggle='{"parent": ".accordion", "group": ".acc-group", "stateOn": ".bar"}'><span class="label label-default">2018-10-30 - Under Review<br>Application Under Review</span></summary>
+ 			<summary class="wb-toggle tgl-tab well" data-toggle='{"parent": ".accordion", "group": ".acc-group", "stateOn": ".bar"}'>2018-10-30 - Under Review<br>Application Under Review</summary>
  			<div class="tgl-panel">
 				<p><strong>We've received your Employment Insurance application</strong>.<br>
 					We’re working to process your request and complete your claim in a reasonable amount of time. Once we finish our review:</p>
